cluster/platform/pharos/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/name: pharos
    app.kubernetes.io/version: 36d3d40
  name: pharos
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: pharos
  template:
    metadata:
      labels:
        app.kubernetes.io/name: pharos
        app.kubernetes.io/version: 36d3d40
    spec:
      imagePullSecrets:
      - name: forgejo-registry-secret
      serviceAccountName: pharos
      enableServiceLinks: false
      containers:
      - image: code.netbird.nathalie-stiefsohn.eu/my-homelab/pharos:36d3d40@sha256:64952cdc99e064b2c7a34223f7edd871e992ec8681adeebdf7d7f18b11ba9129
        name: pharos
        ports:
        - containerPort: 8080
          name: http
        resources:
          requests:
            cpu: 50m
            memory: 128Mi
          limits:
            cpu: 1000m
            memory: 512Mi
        securityContext:
          capabilities:
            drop:
            - ALL
          allowPrivilegeEscalation: false
          readOnlyRootFilesystem: true
      securityContext:
        fsGroup: 1000
        runAsUser: 1000
        runAsGroup: 1000
        runAsNonRoot: true
        seccompProfile:
          type: RuntimeDefault
