cluster/platform/pharos/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/name: pharos
    app.kubernetes.io/version: a889843
  name: pharos
spec:
  selector:
    app.kubernetes.io/name: pharos
  ports:
  - name: http
    port: 8080
    targetPort: 8080
