cluster/platform/pharos/network-policy.yaml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: pharos-networkpolicy
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: pharos
  policyTypes:
  - Ingress
  - Egress
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: internal-gateway
      podSelector:
        matchExpressions:
        - key: app.kubernetes.io/name
          operator: In
          values:
          - internal-gateway
          - internal-gateway-secondary
          - blackbox-exporter
  egress:
  - to:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: kube-system
      podSelector:
        matchLabels:
          k8s-app: kube-dns
    ports:
    - port: 53
      protocol: UDP
    - port: 53
      protocol: TCP
  - to:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: victoria-logs
    ports:
    - port: 9428
      protocol: TCP
  - to:
    - ipBlock:
        cidr: 100.64.0.0/10
    ports:
    - port: 443
      protocol: TCP
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: pharos-apiserver
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: pharos
  description: pharos to the API server.
  egress:
  - toEntities:
    - kube-apiserver
    toPorts:
    - ports:
      - port: "6443"
        protocol: TCP
      - port: "443"
        protocol: TCP
